--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tabler/icons": "^3.11.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^8",
