--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tabler/icons": "^3.11.0",
+    "dayjs": "^1.11.11",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
